# Chaos-Seed

./: .gitignore  Cargo.toml  DEVLOG.md  README.md  TODO.md  TODO_NEXT.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: release.yml  wiki.yml  winui3.yml
chaos-android/: .gitignore  build.gradle.kts  settings.gradle.kts
chaos-android/app/: build.gradle.kts  proguard-rules.pro
chaos-android/tools/: build_android_ffi.sh
chaos-app/: Cargo.toml
chaos-app/src/: cache.rs  danmaku_map.rs  image_fetch.rs  lib.rs
chaos-cli/: Cargo.toml  README.md
chaos-cli/src/: main.rs
chaos-cli/src/cli/: danmaku.rs  mod.rs  play.rs  resolve.rs
chaos-cli/src/player/: mod.rs
chaos-cli/src/tui/: danmaku_tab.rs  mod.rs  resolver_tab.rs
chaos-cli/tests/: cli_test.rs
chaos-core/: Cargo.toml
chaos-core/examples/: danmaku_dump.rs  inspect_cosyvoice_ort_flow.rs  inspect_cosyvoice_ort_llm.rs  livestream_dump.rs  lyrics_search.rs  subtitle_search.rs
chaos-core/src/: lib.rs  main.rs  tls.rs
chaos-core/src/bili_video/: auth.rs  download.rs  mod.rs  mux.rs  parse.rs  pgc.rs  playurl.rs  select_page.rs  subtitle.rs  template.rs
chaos-core/src/danmaku/: client.rs  model.rs  text.rs
chaos-core/src/danmaku/proto/: bili_live_dm_v2.rs  mod.rs
chaos-core/src/live_directory/: client.rs  mod.rs  model.rs
chaos-core/src/live_directory/util/: bili_wbi.rs  mod.rs
chaos-core/src/livestream/: client.rs  mod.rs  model.rs
chaos-core/src/livestream/util/: brace_extract.rs  douyu_auth.rs  huya_url.rs  mbga.rs  mod.rs
chaos-core/src/llm/: config_toml.rs  mod.rs
chaos-core/src/lyrics/: core.rs  error.rs  match_score.rs  mod.rs  model.rs  quality.rs  util.rs
chaos-core/src/lyrics/providers/: gecimi.rs  kugou.rs  lrclib.rs  mod.rs  netease.rs  qq.rs  syair.rs
chaos-core/src/music/: client.rs  download.rs  error.rs  mod.rs  model.rs  util.rs
chaos-core/src/music/providers/: kugou.rs  kuwo.rs  mod.rs  netease.rs  qq.rs  qq_login.rs
chaos-core/src/music/providers/kugou/: client.rs  signatures.rs
chaos-core/src/now_playing/: mod.rs
chaos-core/src/subtitle/: client.rs  models.rs  util.rs
chaos-core/src/tts/: README.md  cosyvoice3_candle.rs  mod.rs  params.rs  post_process.rs  python_infer.rs  python_runner.rs  sampling.rs  text.rs  vad.rs  wav.rs
chaos-core/src/tts/cosyvoice/: engine.rs  mod.rs  pack.rs
chaos-core/src/voice_chat/: mod.rs
chaos-core/tests/: bili_video_mock.rs  danmaku_sim.rs  infer_dream_sft_pack_v1.rs  infer_dream_sft_pt_pyo3.rs  live_directory_mock.rs  live_tts_sft.rs  livestream_bili_live_mock.rs  livestream_douyu_mock.rs  livestream_huya_mock.rs  llm_mock.rs  lyrics_jsonp.rs  lyrics_providers_mock.rs  lyrics_quality.rs  music_filename_sanitize.rs  music_kugou_mock.rs  music_kugou_signatures.rs  music_netease_mock.rs  music_providers_mock.rs  music_qq_cookie_loose_deser.rs  music_qq_sign.rs  serde_roundtrip.rs  sites_parse_target_hint.rs  subtitle_mock.rs
chaos-daemon/: Cargo.toml
chaos-daemon/docs/: API.md  CSharp.md
chaos-daemon/src/: cli.rs  lib.rs  lsp.rs  main.rs  rpc.rs  server.rs
chaos-daemon/tests/: jsonrpc_over_lsp.rs  music_rpc_dispatch.rs
chaos-ffi/: Cargo.toml  cbindgen.toml
chaos-ffi/docs/: API.md  BUILD.md  CSharp.md  LIVESTREAM.md
chaos-ffi/include/: chaos_ffi.h  chaos_ffi_bindings.h
chaos-ffi/src/: lib.rs
chaos-ffi/tests/: livestream_live.rs  now_playing_live.rs
chaos-flutter/: .gitignore  README.md  pubspec.yaml
chaos-flutter/android/: settings.gradle.kts
chaos-flutter/lib/: main.dart
chaos-flutter/test/: danmaku_mapping_test.dart  danmaku_test.dart  gesture_adjust_test.dart  json_utils_test.dart  lsp_framing_test.dart  player_state_machine_test.dart
chaos-flutter/tools/: build_android_ffi.sh  build_windows_deps.ps1  gen_android_launcher_icons.sh
chaos-flutter/windows/: CMakeLists.txt
chaos-proto/: Cargo.toml
chaos-proto/src/: lib.rs
chaos-slint/: Cargo.toml  build.rs
chaos-slint/resources/windows/: app.rc
chaos-slint/src/: main.rs
chaos-slint/src/danmaku/: gui.rs  runtime.rs
chaos-slint/tests/: danmaku_view_render.rs  subtitle_download_view_render.rs
chaos-slint/ui/: app.slint
chaos-slint/ui/views/: about.slint  home.slint  live_source.slint  subtitle_download.slint
chaos-slint/ui/windows/: danmaku_overlay_window.slint
chaos-tauri/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
chaos-tauri/scripts/: copy-libmedia-chunks.mjs
chaos-tauri/src/: main.ts  style.css
chaos-tauri/src-tauri/: Cargo.toml  tauri.conf.json
chaos-tauri/src-tauri/capabilities/: default.json
chaos-tauri/src-tauri/src/: danmaku_ui.rs  livestream_ui.rs  lyrics_app.rs  main.rs
chaos-tts/: Cargo.toml
chaos-tts/src/: engine.rs  lib.rs  pack.rs  sampling.rs  text.rs  wav.rs
chaos-tts/tests/: live_sft.rs
chaos-winui3/: CLI_README.md  ChaosSeed.WinUI3.sln
chaos-winui3/ChaosSeed.Updater/: ChaosSeed.Updater.csproj  Program.cs
chaos-winui3/ChaosSeed.WinUI3.NativeOverlay.Tests/: ChaosSeed.WinUI3.NativeOverlay.Tests.csproj  DanmakuOverlaySpawnGuardTests.cs  MusicDownloadDbTests.cs  MusicQueueStateTests.cs  (+5 more)
config/: llm.example.toml
docs/: BILI_DOWNLOAD.md  BUILD_CHAOS_FLUTTER.md  BUILD_WINUI3.md  CHAOS_CLI.md  LEGAL_MPV.md  WIKI_SYNC.md  WINUI3_AUTO_UPDATE.md  WinUI3_MusicPage_ManualTest.md  tts_cosyvoice3_sft.md  winui3-crash-dumps.md
docs/wiki/: FFI_BUILD.md  (+8 more)
examples/: danmaku_dump.rs
scripts/: build_win.ps1  build_win_skia.ps1  build_wsl_gnu.sh  build_wsl_msvc_xwin.sh  check_winui3_prereqs.ps1  fetch_ffmpeg_win.ps1  setup_cosyvoice_pack_dream_sft_v1.ps1  wiki_export.sh
src/: main.rs
tests/: danmaku_sim.rs  danmaku_view_render.rs  sites_parse_target_hint.rs  subtitle_download_view_render.rs  subtitle_mock.rs  windows_icon_resource.rs
tools/: cosyvoice3_candle_smoke.py  export_spk2info_json_from_pt.py  run_infer_dream_sft_pack_v1_candle_cuda.ps1  sync_voicelab_cosyvoice_dream_sft_weights.ps1  sync_voicelab_cosyvoice_min.ps1  sync_voicelab_python_env.ps1
ui/: app.slint  models.slint  theme.slint
xtask/: Cargo.toml
(+444 files in other folders)
