[workspace]
resolver = "2"
members = [
    "chaos-core",
    "chaos-slint",
    "chaos-tauri/src-tauri",
    "chaos-ffi",
    "chaos-proto",
    "chaos-app",
    "chaos-daemon",
    "xtask",
]
exclude = [
    # 第三方子项目（其自身也有 Cargo.toml/pyproject.toml），避免被本仓库 workspace 误识别。
    "third_party/cosyvoice3.rs",
]

# Keep `cargo build` friction low on dev machines that don't have Tauri system deps.
default-members = ["chaos-core", "chaos-slint", "chaos-ffi"]

[workspace.package]
version = "0.4.6"
edition = "2024"
rust-version = "1.93.0"
license = "MIT"
