[workspace]
resolver = "2"
members = [
    "chaos-core",
    "chaos-tauri/src-tauri",
    "chaos-ffi",
    "chaos-proto",
    "chaos-app",
    "chaos-daemon",
]
exclude = [
    # 第三方子项目（其自身也有 Cargo.toml/pyproject.toml），避免被本仓库 workspace 误识别。
    "third_party/cosyvoice3.rs",
    # 历史遗留：曾用于 Candle 推理路径；当前仅保留目录，不参与 workspace。
    "third_party/candle-patched",
]

# Tauri 分支 workspace 成员
default-members = ["chaos-core", "chaos-ffi", "chaos-daemon", "chaos-tauri/src-tauri"]

[workspace.package]
version = "0.9.0"
edition = "2024"
rust-version = "1.93.0"
license = "MIT"
