[package]
name = "chaos-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core business logic for chaos-seed (subtitle + danmaku)."

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util", "fs", "process"] }
# Enable gzip/brotli decoding: some upstream APIs (e.g. Huya) may return compressed bodies even when we don't request it.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "brotli", "deflate", "cookies", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
fastrand = "2"
tokio-tungstenite = { version = "0.28.0", default-features = false, features = ["connect", "native-tls-vendored", "url"] }
futures-util = "0.3"
url = "2"
flate2 = "1"
regex = "1"
tokio-util = "0.7"
base64 = "0.22"
bytes = "1"
md5 = "0.7"
prost = "0.13"
prost-derive = "0.13"
rustls = { version = "0.23", features = ["tls12"] }
strsim = "0.11"
urlencoding = "2"
rsa = { version = "0.9", features = ["pem"] }
sha2 = "0.10"
hex = "0.4"
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }

# ----- voice chat / tts -----
futures = "0.3"
tokio-stream = "0.1"
tracing = "0.1"
dirs = "6"

hound = "3"
rand = "0.8"
rand_chacha = "0.3"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
rubato = "0.16"

# ONNX runtime (pure Rust).
# Note: CosyVoice packs can be complex; we keep tract as a fallback backend.
candle-core = { version = "0.8", optional = true }
candle-onnx = { version = "0.8", optional = true }
tract-onnx = { version = "0.23.0-dev.2", optional = true }
tract-core = { version = "0.23.0-dev.2", optional = true }

[features]
default = ["onnx-tract"]
onnx-candle = ["dep:candle-core", "dep:candle-onnx"]
onnx-tract = ["dep:tract-onnx", "dep:tract-core"]
live-tests = []

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Foundation", "Media_Control", "Storage_Streams"] }

[dev-dependencies]
tempfile = "3"
httpmock = "0.7"
chaos-proto = { path = "../chaos-proto" }
