[package]
name = "chaos-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Core business logic for chaos-seed (subtitle + danmaku)."
license.workspace = true

[dependencies]
base64 = "0.22"
bytes = "1"
dirs = "6"
fastrand = "2"
flate2 = "1"
# ----- voice chat / tts -----
futures = "0.3"
futures-util = "0.3"
hex = "0.4"
hound = "3"
image = { version = "0.25", default-features = false, features = ["png"] }
md5 = "0.7"
ndarray = { version = "0.15.6", optional = true }
# Pin ort-sys to match silero-vad-rs's ort (=2.0.0-rc.9) to avoid ort/ort-sys API mismatches.
ort-sys = { version = "=2.0.0-rc.9", optional = true }
prost = "0.13"
prost-derive = "0.13"
qrcode = "0.14"
rand = "0.8"
rand_chacha = "0.3"
regex = "1"
# Enable gzip/brotli decoding: some upstream APIs (e.g. Huya) may return compressed bodies even when we don't request it.
reqwest = { version = "0.12", default-features = false, features = [
  "brotli",
  "cookies",
  "deflate",
  "gzip",
  "json",
  "rustls-tls",
  "stream"
] }
rsa = { version = "0.9", features = ["pem"] }
rubato = "0.16"
rustls = { version = "0.23", features = ["tls12"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
silero-vad-rs = { version = "0.1.2", optional = true }
strsim = "0.11"
thiserror = "1"
toml = "0.8"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
pyo3 = { version = "0.23", features = ["auto-initialize"], optional = true }
tokio = { version = "1", features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "process",
  "rt-multi-thread",
  "sync",
  "time"
] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.28.0", default-features = false, features = [
  "connect",
  "native-tls-vendored",
  "url"
] }
tokio-util = "0.7"
tracing = "0.1"
url = "2"
urlencoding = "2"

[dev-dependencies]
chaos-proto = { path = "../chaos-proto" }
httpmock = "0.7"
tempfile = "3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
  "Foundation",
  "Media_Control",
  "Storage_Streams"
] }

[features]
# 默认不启用 PyO3(Python/.pt) 推理路径，避免未配置 Python 环境的设备在加载动态库时被硬依赖阻塞。
default = []
live-tests = []
silero-vad = ["dep:ndarray", "dep:ort-sys", "dep:silero-vad-rs"]

# Route3：使用嵌入式 Python 运行 VoiceLab 的 infer_sft.py（直接使用 .pt checkpoint）
tts-python = ["dep:pyo3"]
