[package]
name = "chaos-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Windows daemon backend for chaos-seed (NamedPipe JSON-RPC)."

[dependencies]
anyhow = "1"
chaos-app = { path = "../chaos-app" }
chaos-proto = { path = "../chaos-proto" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "rt-multi-thread", "sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
