[package]
name = "chaos-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Windows daemon backend for chaos-seed (NamedPipe JSON-RPC)."

[dependencies]
anyhow = "1"
base64 = "0.22"
chaos-app = { path = "../chaos-app" }
chaos-core = { path = "../chaos-core" }
chaos-proto = { path = "../chaos-proto" }
fastrand = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
