[package]
name = "chaos-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "C ABI adapter for chaos-core (JSON-based, for WinUI3/Qt/etc)."

[lib]
crate-type = ["cdylib"]

[dependencies]
chaos-core = { path = "../chaos-core" }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }

[dev-dependencies]
serde_json = "1"

