[package]
name = "chaos-slint"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Slint UI for chaos-seed."

[[bin]]
name = "chaos-seed"
path = "src/main.rs"

[dependencies]
chaos-core = { path = "../chaos-core" }
slint = { version = "=1.15.0", default-features = false, features = ["raw-window-handle-06"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
open = "5"
fastrand = "2"
raw-window-handle = "0.6"
url = "2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }

[target.'cfg(windows)'.dependencies]
rfd = "0.14"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_System", "Win32_System_LibraryLoader"] }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
slint-build = "=1.15.0"
embed-resource = "3"

[features]
# Default to software renderer for maximum portability.
# Skia renderer can fail to link on some MSVC toolset setups (C++ STL mismatch).
default = ["renderer-software"]

# Feature-forwarding so we can switch renderers without rewriting code.
renderer-skia = ["slint/backend-winit", "slint/renderer-skia", "slint/compat-1-2"]
renderer-software = ["slint/backend-winit", "slint/renderer-software", "slint/compat-1-2"]

