[package]
name = "chaos-tts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
base64 = "0.22"
bytes = "1"
hound = "3"
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
tract-onnx = "0.23.0-dev.2"
tract-core = "0.23.0-dev.2"

[dev-dependencies]
tempfile = "3"

[features]
default = []
live-tests = []
