[package]
name = "chaos-tauri"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Tauri UI for chaos-seed (PoC)."

[build-dependencies]
tauri-build = "2"

[dependencies]
chaos-core = { path = "../../chaos-core" }
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
base64 = "0.22"
futures-util = "0.3"
bytes = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Foundation", "UI_ViewManagement"] }
